--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "job-portal",
   "version": "0.1.0",
-  "homepage": "https://Himanshur25.github.io/job-portal",
+  "homepage": "https://stc-job-portal.netlify.app/",
   "private": true,
   "dependencies": {
     "@sanity/client": "^4.0.1",
